# pypresplash

./: CMakeLists.txt  README.md  pyproject.toml
examples/: main.py
src/: bridge.cpp  splash_screen.cpp
src/include/: splash_linux.h  splash_screen.h
