[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pypresplash"
version = "1.0.2"
description = "A cross-platform splash screen module with smooth animations and transparency."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Kartavya Shukla", email = "novfensec@protonmail.com" }
]
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = []

[tool.scikit-build]
minimum-version = "0.4"
cmake.version = ">=3.15"
cmake.build-type = "Release"
sdist.include = ["src/**/*", "CMakeLists.txt"]